# catchrobo_robot

./: .gitignore  README.md
catchrobo_bringup/: CMakeLists.txt  package.xml
catchrobo_control/: CMakeLists.txt  package.xml  setup.py
catchrobo_description/: CMakeLists.txt  package.xml
catchrobo_driver/: CMakeLists.txt  package.xml  setup.py
catchrobo_gazebo/: CMakeLists.txt  package.xml
catchrobo_gui/: CMakeLists.txt  README.md  blue.rviz  blue_full.rviz  jtalk.py  maker.py  motor_debug.py  motor_debug2.py  motor_debug_pub.py  overlay_satus.py  package.xml  plugin_description.xml  red.rviz  red_full.rviz  voice.py
catchrobo_gui/include/field/: blue_field.h  red_field.h
catchrobo_gui/include/rviz_plugin_examples/: mainwindow.h
catchrobo_gui/launch/: blue.launch  blue_full.launch  demo.launch  red.launch  red_full.launch
catchrobo_gui/src/: basic_shapes.cpp  blue_field.cpp  jsk_status.cpp  red_field.cpp
catchrobo_gui/src/ui/: blue_field.ui  red_field.ui
catchrobo_gui/src/ui/backup/: blue_field_.ui
catchrobo_log/: CMakeLists.txt  package.xml  setup.py
catchrobo_manager/: CMakeLists.txt  package.xml  setup.py
catchrobo_manual/: CMakeLists.txt  README.txt  package.xml  setup.py
catchrobo_msgs/: CMakeLists.txt  package.xml
catchrobo_rosbag/: CMakeLists.txt  package.xml  setup.py
catchrobo_sim/: CMakeLists.txt  package.xml
catchrobo_sound/: CMakeLists.txt  package.xml  setup.py
catchrobo_test/: CMakeLists.txt  package.xml
doc/: raspberry_setup.md
jagarico_config/: README.txt  blue_jagarico.csv  red_jagarico.csv
(+262 files in other folders)
